Fixed get import routes
