# apps/messaging-api/routes/users/index.ts
@@ -29,6 +29,7 @@ import {
 import { createError } from "@fastify/error";
 import {
   READ_USER_IMPORTS_ERROR,
+  getUserImportForOrganisation,
   getUserImportsForOrganisation,
 } from "../../services/users/import/read-user-imports";
 
@@ -207,7 +208,7 @@ export default async function users(app: FastifyInstance) {
   );
 
   interface GetImportsSchema {
-    Params: { organisationId?: string };
+    Querystring: { organisationId?: string };
     Response: { data: Omit<UsersImport, "usersData">[] };
   }
 
@@ -217,7 +218,7 @@ export default async function users(app: FastifyInstance) {
       preValidation: app.verifyUser,
       schema: {
         tags,
-        params: Type.Optional(
+        querystring: Type.Optional(
           Type.Object({
             organisationId: Type.Optional(Type.String({ format: "uuid" })),
           }),
@@ -231,23 +232,52 @@ export default async function users(app: FastifyInstance) {
         },
       },
     },
-    async (request: FastifyRequest<GetImportsSchema>, _reply: FastifyReply) => {
-      const organisationId =
-        request.user!.organisation_id ?? request.params.organisationId;
-      if (!organisationId) {
-        throw createError(
-          READ_USER_IMPORTS_ERROR,
-          "Cannot retrieve an organisation id",
-          400,
-        )();
-      }
-
-      return getUserImportsForOrganisation({
+    async (
+      request: FastifyRequest<GetImportsSchema>,
+      _reply: FastifyReply,
+    ) => ({
+      data: await getUserImportsForOrganisation({
         logger: request.log,
         pool: app.pg.pool,
-        organisationId,
-      });
+        organisationId: getOrganisationIdFromRequest(request),
+      }),
+    }),
+  );
+
+  interface GetImportSchema {
+    Querystring: { organisationId?: string };
+    Response: { data: UsersImport };
+    Params: { importId: string };
+  }
+  app.get<GetImportSchema>(
+    "/imports/:importId",
+    {
+      preValidation: app.verifyUser,
+      schema: {
+        tags,
+        querystring: Type.Optional(
+          Type.Object({
+            organisationId: Type.Optional(Type.String({ format: "uuid" })),
+          }),
+        ),
+        params: Type.Object({ importId: Type.String({ format: "uuid" }) }),
+        response: {
+          200: Type.Object({
+            data: UsersImportSchema,
+          }),
+          "5xx": HttpError,
+          "4xx": HttpError,
+        },
+      },
     },
+    async (request: FastifyRequest<GetImportSchema>, _reply: FastifyReply) => ({
+      data: await getUserImportForOrganisation({
+        logger: request.log,
+        pool: app.pg.pool,
+        organisationId: getOrganisationIdFromRequest(request),
+        importId: request.params.importId,
+      }),
+    }),
   );
 
   const saveRequestFile = async (request: FastifyRequest): Promise<string> => {
@@ -263,5 +293,23 @@ export default async function users(app: FastifyInstance) {
     const savedFiles = await request.saveRequestFiles();
 
     return savedFiles[0].filepath;
+  };
+
+  const getOrganisationIdFromRequest = (request: FastifyRequest): string => {
+    const query = request.query as { organisationId?: string };
+    // organisationId query parameter added to
+    // make us able to test it until we won't have
+    // an organisation id set into the logged in user
+    const organisationId =
+      request.user!.organisation_id ?? query.organisationId;
+    if (!organisationId) {
+      throw createError(
+        READ_USER_IMPORTS_ERROR,
+        "Cannot retrieve an organisation id",
+        400,
+      )();
+    }
+
+    return organisationId;
   };
 }
